# pushkind-crm

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SPEC.md  diesel.toml  pushkind-crm-check-events.service  pushkind-crm.service
.github/workflows/: deploy_dev.yml  test_pr.yml
config/: default.yaml  local.yaml  prod.yaml
docs/tasks/: routes_to_services_refactor.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/app/: client.html  index.html  managers.html  no-access.html  settings.html
frontend/src/components/: CrmNavbar.tsx  CrmShell.tsx  CrmShellFatalState.tsx  UserMenuDropdown.test.tsx  UserMenuDropdown.tsx
frontend/src/entries/: client.tsx  dashboard.tsx  managers.tsx  no-access.tsx  settings.tsx
frontend/src/lib/: api.test.ts  api.ts  models.ts  useCrmShell.ts
frontend/src/pages/: ClientBootstrap.test.tsx  ClientBootstrap.tsx  DashboardBootstrap.tsx  ManagersBootstrap.tsx  NoAccessPage.tsx  SettingsBootstrap.tsx
frontend/src/styles/: foundation.css
migrations/2025-07-06-110744_create_clients/: up.sql
migrations/2025-07-08-080456_create_managers/: down.sql  up.sql
migrations/2025-07-14-124648_create_clients_fts/: down.sql  up.sql
migrations/2025-07-18-093258_create_client_events/: down.sql  up.sql
migrations/2025-08-28-131218_create-hub_id-client-email-index/: down.sql  up.sql
migrations/2025-08-29-104546_create_optional_client_fields/: down.sql  up.sql
migrations/2025-09-04-104234_drop-client-address-column/: down.sql  up.sql
migrations/2025-09-11-101500_extend-client-fts-with-fields/: down.sql  up.sql
migrations/2025-09-16-120000_update_client_fts_optional_fields/: down.sql  up.sql
migrations/2025-10-06-121652_add-manager-is_manager-column/: down.sql  up.sql
migrations/2025-10-20-000001_add-client-address-contact/: up.sql
migrations/2025-10-30-120000_create_hub_important_fields/: down.sql  up.sql
migrations/2025-10-31-052925_remove-contact-address/: up.sql
migrations/2026-01-05-115023_add-client-public-id/: down.sql  up.sql
migrations/2026-01-28-120000_add-query-indexes/: down.sql  up.sql
migrations/2026-03-18-000001_create-store-otps/: down.sql  up.sql
plans/: api-v1-clients-admin-access.md  e2e-user-story-coverage.md  make-check-reporting.md  react-frontend-migration.md
specs/features/: api-v1-clients-admin-access.md  e2e-user-story-coverage.md  make-check-reporting.md  react-frontend-migration.md
src/: db.rs  error_conversions.rs  frontend.rs  lib.rs  main.rs  pagination.rs  schema.rs
src/domain/: client.rs  client_event.rs  important_field.rs  manager.rs  mod.rs  store_otp.rs  store_session.rs  types.rs
src/dto/: api.rs  client.rs  important_fields.rs  main.rs  managers.rs  mod.rs  store.rs
src/forms/: client.rs  important_fields.rs  main.rs  managers.rs  mod.rs  store.rs
src/models/: auth.rs  client.rs  client_event.rs  config.rs  important_field.rs  manager.rs  mod.rs  store_otp.rs  zmq.rs
src/repository/: client.rs  client_event.rs  errors.rs  manager.rs  mock.rs  mod.rs  store_otp.rs  test.rs
src/routes/: api.rs  aux.rs  client.rs  important_fields.rs  main.rs  managers.rs  mod.rs  rate_limit.rs  settings.rs  store.rs
src/services/: api.rs  client.rs  important_fields.rs  main.rs  managers.rs  mod.rs  settings.rs  store.rs
templates/: base.html  client_event.html  client_event_data.html  client_event_type.html  navigation.html  pagination.html
templates/client/: actions.html  attachment_modal.html  client_card.html  client_events.html  comment_modal.html  index.html  save_client_modal.html
templates/components/: client_event.html  client_event_data.html  client_event_type.html  macros.html  markdown.html  navigation.html  user_popover.html
templates/important_fields/: index.html
templates/main/: add_client_modal.html  index.html
templates/managers/: index.html  modal_body.html
templates/settings/: index.html
tests/: db.rs  e2e.rs  middleware.rs  repository.rs  routes.rs  routes_store_auth.rs
tests/common/: mod.rs
