[package]
name = "pushkind-crm"
version = "0.1.0"
edition = "2024"
default-run = "pushkind-crm"

[dependencies]
actix-files = "0.6.6"
actix-identity = "0.9.0"
actix-multipart = "0.7.2"
actix-session = { version = "0.11.0", features = ["cookie-session"] }
actix-web = "4.11.0"
actix-web-flash-messages = { version = "0.5.0", features = ["cookies"] }
chrono = { version = "0.4.41", features = ["serde"] }
csv = "1.4.0"
diesel = { version = "2.3.3", features = [
    "sqlite",
    "r2d2",
    "chrono",
    "returning_clauses_for_sqlite_3_35",
] }
dotenvy = "0.15.7"
env_logger = "0.11.8"
lazy_static = "1.5.0"
log = "0.4.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_html_form = "0.2.7"
serde_json = "1.0.143"
tera = { version = "1.20.0", features = ["builtins"] }
thiserror = "2.0.17"
ammonia = "4.1.2"
pushkind-common = { git = "https://github.com/pushkindt/pushkind-common.git", branch = "main", features = [
    "db",
    "actix",
    "emailer",
    "zeromq",
] }
validator = { version = "0.20.0", features = ["derive"] }
zmq = "0.10.0"
tokio = { version = "1.48.0", features = ["full"] }
phonenumber = "0.3.7"
actix-cors = "0.7.1"

[[bin]]
name = "check_events"

[dev-dependencies]
diesel_migrations = "2.2.0"
