[package]
name = "pushkind-crm"
version = "0.1.0"
edition = "2024"
default-run = "pushkind-crm"

[dependencies]
actix-files = "0.6.9"
actix-identity = "0.9.0"
actix-multipart = "0.7.2"
actix-session = { version = "0.11.0", features = ["cookie-session"] }
actix-web = "4.12.1"
actix-web-flash-messages = { version = "0.5.0", features = ["cookies"] }
chrono = { version = "0.4.41", features = ["serde"] }
csv = "1.4.0"
diesel = { version = "2.3.4", features = [
    "sqlite",
    "r2d2",
    "chrono",
    "returning_clauses_for_sqlite_3_35",
] }
dotenvy = "0.15.7"
env_logger = "0.11.8"
lazy_static = "1.5.0"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_html_form = "0.2.8"
serde_json = "1.0.143"
tera = { version = "1.20.1", features = ["builtins"] }
thiserror = "2.0.17"
ammonia = "4.1.2"
pushkind-common = { git = "https://github.com/pushkindt/pushkind-common.git", branch = "main", features = [
    "db",
    "actix",
    "emailer",
    "zeromq",
] }
validator = { version = "0.20.0", features = ["derive"] }
zmq = "0.10.0"
tokio = { version = "1.48.0", features = ["full"] }
phonenumber = "0.3.7"
actix-cors = "0.7.1"
config = { version = "0.15.19", default-features = false, features = ["yaml"] }

[[bin]]
name = "check_events"

[dev-dependencies]
diesel_migrations = "2.3.1"
tempfile = "3.13.0"
